# open-stock

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  build.sh  docker-compose.yaml  schema.sql  start.sh
.github/workflows/: docker-image.yml
docs/api/: transactions.md
examples/overview/: Cargo.toml  README.md  docker-compose.yaml  init.sql
examples/overview/src/: main.rs
init/: 01.sql
src/: catchers.rs  example.rs  guards.rs  helpers.rs  lib.rs  main.rs  pool.rs
src/entities/: authrecord.rs  customer.rs  employee.rs  kiosk.rs  mod.rs  prelude.rs  products.rs  promotion.rs  sea_orm_active_enums.rs  session.rs  store.rs  supplier.rs  tenants.rs  transactions.rs
src/methods/: common.rs  macros.rs  mod.rs
src/methods/customer/: conversions.rs  customer.rs  handlers.rs  mod.rs  structs.rs
src/methods/employee/: conversions.rs  employee.rs  handlers.rs  mod.rs  structs.rs
src/methods/helpers/: handlers.rs  mod.rs  structs.rs
src/methods/ingress/: handlers.rs  mod.rs
src/methods/kiosk/: conversions.rs  handlers.rs  mod.rs  structs.rs
src/methods/payment/: discount.rs  mod.rs  payment.rs  structs.rs
src/methods/product/: conversions.rs  example.rs  handlers.rs  mod.rs  product.rs  structs.rs  variant.rs
src/methods/stml/: mod.rs  order.rs  stock.rs
src/methods/store/: conversions.rs  example.rs  handlers.rs  mod.rs  store.rs  structs.rs
src/methods/supplier/: conversions.rs  example.rs  handlers.rs  mod.rs  structs.rs  supplier.rs
src/methods/tenant/: conversions.rs  handlers.rs  mod.rs  structs.rs
src/methods/transaction/: conversions.rs  example.rs  handlers.rs  mod.rs  structs.rs  transaction.rs
src/migrator/: m20230730_000001_products.rs  m20230730_000002_customer.rs  m20230730_000003_transactions.rs  m20230730_000004_employee.rs  m20230730_000005_supplier.rs  m20230730_000006_session.rs  m20230730_000007_store.rs  m20230730_000008_promotion.rs  m20230730_000009_kiosk.rs  m20230730_000010_authrec.rs  m20230730_000011_tenants.rs  mod.rs
tests/: client_test.rs
