[package]
name = "open-stock"
version = "0.1.19"
edition = "2021"
authors = ["bennjii"]
license = "MIT"
description = "An Inventory Management Database Interface Layer for MySQL"

[dependencies]
# Core Utils
tokio = { version = "1.28.2", features = ["rt"], optional = true }
rocket = { version = "0.5.0", features = [
  "json", "secrets", "tls"
], optional = true }

# ORM
sea-orm-rocket = { version = "0.5.3", optional = true }
sea-orm-migration = { version = "0.12.1", optional = true }
sea-orm = { version = "0.12.1", features = [
  "macros",
  "runtime-tokio-native-tls",
  "sqlx-mysql",
], optional = true}

# Traits & Futures
async-trait = { version = "0.1.58", optional = true  }
futures = { version = "^0.3", optional = true  }

# Positioning
geo = { version = "0.27.0", optional = true }
photon-geocoding = { version = "1.1.0", optional = true  }

# Passwords
rust-argon2 = { version = "2.0.0", optional = true }

# Environment
dotenv = { version = "0.15.0", optional = true }

# Misc.
lazy_static = { version = "1.4.0" }
regex = { version = "1.10.2" }
chrono = { version = "0.4.31", features = ["serde"]  }
uuid = { version = "1.2.2", features = [ "v4", "fast-rng", "serde" ] }
rand = { version = "0.8.5", optional = true }

# Parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Enum Mods
strum = "0.25.0"
enum-iterator = "1.4.1"

# Documentation & Validation
rocket_db_pools = { version = "0.1.0" }
rocket_okapi = { version = "0.8.0", features = ["uuid", "swagger", "rocket_db_pools"] }
schemars = { version = "0.8.16" , features = ["chrono"]}
okapi = { version = "0.7.0", features = ["impl_json_schema"] }
rocket-validation = { version = "0.1.4", git = "https://github.com/bennjii/rocket-validation.git", branch = "main" }
validator="0.16.1"

# Automations
#macro_test = { path = "../../macro_test" }

[features]
types = []
process = [
  "sea-orm", "sea-orm-migration", "sea-orm-rocket",
  "photon-geocoding", "geo", "tokio", "rocket",
  "async-trait", "futures", "dotenv", "rust-argon2", "rand"
]
methods = ["types"]
sql = ["methods"]
all = ["types", "methods", "sql", "process", "sea-orm/sqlx-mysql"]
default = ["all"]

[profile.release]
strip = false

[profile.dev]
# split-debuginfo = "unpacked"
