[package]
name = "overview"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stock-rs = { path = "../../" }
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
async-std = { version = "^1.9", features = [ "attributes", "tokio1" ] }
uuid = { version = "1.2.2", features = [ "v4", "fast-rng", "serde" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "0.10.3", features = [ "sqlx-all", "runtime-async-std-native-tls" ] } 
futures = { version = "^0.3" }
async-stream = { version = "^0.3" }
futures-util = { version = "^0.3" }